fix graph alignment in firefox, fixes #67

--- a/client/app/components/NodeGraph/styles.css
+++ b/client/app/components/NodeGraph/styles.css
@@ -26,6 +26,7 @@ svg {
     top: 10px;
     left: 0;
     max-height: 100%;
+    width: 100%;
 }
 
 .node circle {
